[package]
name = "tm-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.74"
base64 = "0.21.2"
chrono = "0.4.26"
lazy_static = "1.4.0"
reqwest = { version = "0.11.18", features = ["blocking"] }
rocket = { version = "0.5.0-rc.3", features = ["tls", "json"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
